Testcases for or(), start using _state

--- a/test/index.html
+++ b/test/index.html
@@ -11,5 +11,6 @@
         <script src="resources/qunit.js"></script>
         <script src="../regex.js"></script>
         <script src="cases/readme_cases.js"></script>
+        <script src="cases/or.js"></script>
     </body>
 </html>
