--- a/test/index.html
+++ b/test/index.html
@@ -12,5 +12,6 @@
         <script src="../regex.js"></script>
         <script src="cases/readme_cases.js"></script>
         <script src="cases/or.js"></script>
+        <script src="cases/repeat.js"></script>
     </body>
 </html>
