--- a/test/index.html
+++ b/test/index.html
@@ -13,5 +13,6 @@
         <script src="cases/readme_cases.js"></script>
         <script src="cases/or.js"></script>
         <script src="cases/repeat.js"></script>
+        <script src="cases/alt_syntax.js"></script>
     </body>
 </html>
