Absolute basics of exec(str)

--- a/test/index.html
+++ b/test/index.html
@@ -15,5 +15,6 @@
         <script src="cases/repeat.js"></script>
         <script src="cases/alt_syntax.js"></script>
         <script src="cases/any.js"></script>
+        <script src="cases/capture.js"></script>
     </body>
 </html>
