--- a/test/index.html
+++ b/test/index.html
@@ -14,5 +14,6 @@
         <script src="cases/or.js"></script>
         <script src="cases/repeat.js"></script>
         <script src="cases/alt_syntax.js"></script>
+        <script src="cases/any.js"></script>
     </body>
 </html>
