--- a/test/index.html
+++ b/test/index.html
@@ -16,5 +16,6 @@
         <script src="cases/alt_syntax.js"></script>
         <script src="cases/any.js"></script>
         <script src="cases/capture.js"></script>
+        <script src="cases/states.js"></script>
     </body>
 </html>
