--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,10 @@
         <div id="qunit-fixture"></div>
         <script src="resources/qunit.js"></script>
         <script src="../regex.js"></script>
-        <script src="cases/basics.js"></script>
+        <script src="cases/literals.js"></script>
         <script src="cases/readme_cases.js"></script>
         <script src="cases/or.js"></script>
+        <script src="cases/sequence.js"></script>
         <script src="cases/repeat.js"></script>
         <script src="cases/alt_syntax.js"></script>
         <script src="cases/any.js"></script>
