--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
         <div id="qunit-fixture"></div>
         <script src="resources/qunit.js"></script>
         <script src="../regex.js"></script>
+        <script src="cases/flags.js"></script>
         <script src="cases/literals.js"></script>
         <script src="cases/readme_cases.js"></script>
         <script src="cases/or.js"></script>
