fix(macros): restore macro functionality

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
         <script src="../regex.js"></script>
         <script src="cases/flags.js"></script>
         <script src="cases/literals.js"></script>
-        <script src="cases/readme_cases.js"></script>
+        <script src="cases/macros.js"></script>
         <script src="cases/or.js"></script>
         <script src="cases/sequence.js"></script>
         <script src="cases/repeat.js"></script>
@@ -20,5 +20,6 @@
         <script src="cases/any.js"></script>
         <script src="cases/capture.js"></script>
         <script src="cases/states.js"></script>
+        <script src="cases/readme_cases.js"></script>
     </body>
 </html>
