fix: remove console warnings, re-implement test

--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
         <script src="cases/literals.js"></script>
         <script src="cases/macros.js"></script>
         <script src="cases/or.js"></script>
+        <script src="cases/test.js"></script>
         <script src="cases/sequence.js"></script>
         <script src="cases/repeat.js"></script>
         <script src="cases/alt_syntax.js"></script>
