feat(backrefs): add initial, trivial backref support

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
         <script src="cases/alt_syntax.js"></script>
         <script src="cases/any.js"></script>
         <script src="cases/capture.js"></script>
+        <script src="cases/backrefs.js"></script>
         <script src="cases/states.js"></script>
         <script src="cases/readme_cases.js"></script>
     </body>
