--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
         <script src="cases/test.js"></script>
         <script src="cases/sequence.js"></script>
         <script src="cases/repeat.js"></script>
+        <script src="cases/optional.js"></script>
         <script src="cases/alt_syntax.js"></script>
         <script src="cases/any.js"></script>
         <script src="cases/capture.js"></script>
