test: add notFollowedBy test for what I'll discuss in talk

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
         <script src="cases/capture.js"></script>
         <script src="cases/backrefs.js"></script>
         <script src="cases/states.js"></script>
+        <script src="cases/following.js"></script>
         <script src="cases/misc.js"></script>
         <script src="cases/readme_cases.js"></script>
     </body>
