feat(fromRegex): start branch for fromRegex fns

--- a/test/index.html
+++ b/test/index.html
@@ -26,5 +26,6 @@
         <script src="cases/following.js"></script>
         <script src="cases/misc.js"></script>
         <script src="cases/readme_cases.js"></script>
+        <script src="cases/fromRegex.js"></script>
     </body>
 </html>
